#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
åˆå§‹åŒ–è¿ç§»è¿½è¸ªæ•°æ®åº“å¹¶å¯¼å…¥ç°æœ‰æ‰¹æ¬¡æ•°æ®
"""

import sys
sys.path.insert(0, '/home/pix/dev/code/java/DnfGameServer/devdoc/protobuf/reports/scripts')

from core.migration_tracker import MigrationTracker, Batch, MigrationFile, Issue, MigrationStatus

def init_with_existing_data():
    """åˆå§‹åŒ–æ•°æ®åº“å¹¶å¯¼å…¥ç°æœ‰æ‰¹æ¬¡æ•°æ®"""
    
    with MigrationTracker() as tracker:
        print("ğŸš€ åˆå§‹åŒ–è¿ç§»è¿›åº¦æ•°æ®åº“...")
        print("=" * 50)
        
        # åˆ›å»ºæ‰¹æ¬¡01 - LOGIN
        batch1 = Batch(
            id=None,
            batch_name="batch_01",
            batch_number=1,
            description="ç™»å½•è®¤è¯æ¨¡å—è¿ç§»",
            status="completed",
            priority=10,
            total_files=5,
            migrated_files=5,
            start_date="2026-02-08",
            planned_end_date="2026-02-09",
            actual_end_date="2026-02-09",
            blocker=None,
            notes="è·¨è¯­è¨€é€šä¿¡éªŒè¯é€šè¿‡ï¼ŒåŒæ¨¡å¼ç¼–è§£ç å™¨å®ç°å®Œæˆ",
            created_at=None,
            updated_at=None
        )
        b1_id = tracker.create_batch(batch1)
        print(f"âœ… æ‰¹æ¬¡01åˆ›å»ºæˆåŠŸ (ID: {b1_id})")
        
        # æ·»åŠ æ‰¹æ¬¡01çš„æ–‡ä»¶
        files_01 = [
            ("ChannelInfo.java", "LOGIN", 10000),
            ("IntrudeMemberInfo.java", "LOGIN", 10000),
            ("IntrudeInfo.java", "LOGIN", 10000),
            ("LoginRequest.java", "LOGIN", 10000),
            ("LoginResponse.java", "LOGIN", 10000),
        ]
        
        for fname, module, mid in files_01:
            f = MigrationFile(
                id=None,
                batch_id=b1_id,
                file_name=fname,
                module_name=module,
                module_id=mid,
                status="completed",
                priority=10,
                proto_file=f"proto/dnf/v1/auth_login.proto",
                java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                has_test=True,
                test_passed=True,
                issues_count=0,
                migration_notes="è¿ç§»æˆåŠŸ",
                start_date="2026-02-08",
                completion_date="2026-02-09",
                created_at=None,
                updated_at=None
            )
            tracker.create_file(f)
        print(f"âœ… æ‰¹æ¬¡01æ–‡ä»¶æ·»åŠ å®Œæˆ ({len(files_01)}ä¸ªæ–‡ä»¶)")
        
        # åˆ›å»ºæ‰¹æ¬¡02 - SESSION
        batch2 = Batch(
            id=None,
            batch_name="batch_02",
            batch_number=2,
            description="ä¼šè¯ç®¡ç†æ¨¡å—è¿ç§»",
            status="completed",
            priority=9,
            total_files=2,
            migrated_files=1,
            start_date="2026-02-09",
            planned_end_date="2026-02-09",
            actual_end_date="2026-02-09",
            blocker="SESSION_LOGOUTä½¿ç”¨åœºæ™¯å¾…ç¡®è®¤",
            notes="PINGæ¶ˆæ¯è¿ç§»å®Œæˆï¼ŒSESSION_LOGOUTå¾…ç¡®è®¤",
            created_at=None,
            updated_at=None
        )
        b2_id = tracker.create_batch(batch2)
        print(f"âœ… æ‰¹æ¬¡02åˆ›å»ºæˆåŠŸ (ID: {b2_id})")
        
        # æ·»åŠ æ‰¹æ¬¡02çš„æ–‡ä»¶
        files_02 = [
            ("REQ_PING.java", "SESSION", 10006, "completed"),
            ("RES_PING.java", "SESSION", 10006, "completed"),
            ("REQ_SESSION_LOGOUT.java", "SESSION", None, "pending"),
            ("RES_SESSION_LOGOUT.java", "SESSION", None, "pending"),
        ]
        
        for fname, module, mid, status in files_02:
            f = MigrationFile(
                id=None,
                batch_id=b2_id,
                file_name=fname,
                module_name=module,
                module_id=mid,
                status=status,
                priority=8,
                proto_file=f"proto/dnf/v1/session.proto" if status == "completed" else None,
                java_file=f"src/main/java/com/dnfm/mina/protobuf/{fname}",
                has_test=status == "completed",
                test_passed=status == "completed",
                issues_count=0 if status == "completed" else 1,
                migration_notes="è¿ç§»æˆåŠŸ" if status == "completed" else "ä½¿ç”¨åœºæ™¯å¾…ç¡®è®¤",
                start_date="2026-02-09" if status == "completed" else None,
                completion_date="2026-02-09" if status == "completed" else None,
                created_at=None,
                updated_at=None
            )
            tracker.create_file(f)
        print(f"âœ… æ‰¹æ¬¡02æ–‡ä»¶æ·»åŠ å®Œæˆ ({len(files_02)}ä¸ªæ–‡ä»¶)")
        
        # æ·»åŠ ç¤ºä¾‹é—®é¢˜
        issue1 = Issue(
            id=None,
            batch_id=b2_id,
            file_id=None,
            title="SESSION_LOGOUTä½¿ç”¨åœºæ™¯å¾…ç¡®è®¤",
            description="æ²¡æœ‰æ‰¾åˆ°REQ/RESç±»ï¼Œåªæœ‰Types.REQå’ŒTypes.RESã€‚æ²¡æœ‰æ‰¾åˆ°Module IDå®šä¹‰ï¼Œä¹Ÿæ²¡æœ‰æ‰¾åˆ°å®é™…ä½¿ç”¨åœºæ™¯ã€‚",
            solution=None,
            status="open",
            severity="medium",
            tags='["usage", "module_id"]',
            created_at=None,
            resolved_at=None
        )
        tracker.create_issue(issue1)
        print(f"âœ… ç¤ºä¾‹é—®é¢˜æ·»åŠ å®Œæˆ")
        
        # åˆ›å»ºæ‰¹æ¬¡03-10çš„å ä½ç¬¦
        future_batches = [
            ("batch_03", 3, "è§’è‰²ç®¡ç†æ¨¡å—", "in_progress", 8),
            ("batch_04", 4, "ç‰©å“ç³»ç»Ÿæ¨¡å—", "pending", 8),
            ("batch_05", 5, "æŠ€èƒ½ç³»ç»Ÿæ¨¡å—", "pending", 7),
            ("batch_06", 6, "å‰¯æœ¬ç³»ç»Ÿæ¨¡å—", "pending", 7),
            ("batch_07", 7, "èŠå¤©ç³»ç»Ÿæ¨¡å—", "pending", 6),
            ("batch_08", 8, "é‚®ä»¶ç³»ç»Ÿæ¨¡å—", "pending", 6),
            ("batch_09", 9, "å¥½å‹ç³»ç»Ÿæ¨¡å—", "pending", 5),
            ("batch_10", 10, "å® ç‰©ç³»ç»Ÿæ¨¡å—", "pending", 5),
        ]
        
        for name, num, desc, status, priority in future_batches:
            batch = Batch(
                id=None,
                batch_name=name,
                batch_number=num,
                description=desc,
                status=status,
                priority=priority,
                total_files=0,
                migrated_files=0,
                start_date=None,
                planned_end_date=None,
                actual_end_date=None,
                blocker=None,
                notes=None,
                created_at=None,
                updated_at=None
            )
            tracker.create_batch(batch)
        print(f"âœ… æœªæ¥æ‰¹æ¬¡åˆ›å»ºå®Œæˆ ({len(future_batches)}ä¸ªæ‰¹æ¬¡)")
        
        print("\n" + "=" * 50)
        print("âœ¨ æ•°æ®åº“åˆå§‹åŒ–å®Œæˆï¼")
        print("\nå¯ç”¨å‘½ä»¤:")
        print("  python migration_tracker.py progress        - æŸ¥çœ‹æ•´ä½“è¿›åº¦")
        print("  python migration_tracker.py list_batches    - åˆ—å‡ºæ‰€æœ‰æ‰¹æ¬¡")
        print("  python migration_tracker.py batch batch_01  - æŸ¥çœ‹æ‰¹æ¬¡è¯¦æƒ…")

if __name__ == '__main__':
    init_with_existing_data()
